Refactor api_test
